gradview/frontend/src/UI/Legend/Legend.css
.legend {
    display: flex;
    margin: 0 20px 0 0;
}
.legend p {
    margin: auto;
    display: flex;
}

.legend  .color {
    width: 16px;
    height: 16px;
    margin: 0 4px 0 0;
    border-radius: 50%;
    border: 2px solid black;
    text-align: center;
    line-height: 20px;
    font-size: 16px;
    font-weight: bold;
    z-index: 150;
    cursor: pointer;
}

